Fix jumpy layout by making results scrollable

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -93,3 +93,7 @@
     }
   }
 }
+
+.page-readout {
+  margin: auto 0.25em;
+}
